fix: Pillar On Summary Page Stretched Causing Text To Be Cut Off
Removed grid template column prop style for desktop

--- a/src/core/templates/row.scss
+++ b/src/core/templates/row.scss
@@ -1551,9 +1551,6 @@
           max-width: 100%;
           padding-right: 5rem;
           gap: 0.75ch 1rem;
-          grid-template-columns:
-            [full-start key] minmax(0, 1fr) [value] minmax(max-content, 2fr)
-            [full-end];
         }
 
         @include tablet {
